src/objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>Available_for__c</fullName>
        <formula>TEXT( Product2.Available_for__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available for</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Lenght__c</fullName>
        <inlineHelpText>If contract length is set as 0, means that the user at the moment that is given the discount must inform for how long the discount will be applied</inlineHelpText>
        <label>Contract Lenght</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Length_Duration__c</fullName>
        <label>Contract Length Duration</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>OneTime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Renewal_Price__c</fullName>
        <description>Price used for renewing subscription</description>
        <label>Renewal Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Renewal_Term_Period_Type__c</fullName>
        <label>Renewal Term Period Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Day</fullName>
                </value>
                <value>
                    <fullName>Week</fullName>
                </value>
                <value>
                    <fullName>OneTime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Term__c</fullName>
        <label>Renewal Term</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TC_Version__c</fullName>
        <label>T&amp;C Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1.0</fullName>
                </value>
                <value>
                    <fullName>2.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>Restrict_Edit_Of_Fields</fullName>
        <active>false</active>
        <errorConditionFormula>OR(
ISCHANGED( Product2Id ),
ISCHANGED( Renewal_Term__c ),
ISCHANGED( Renewal_Term_Period_Type__c ),
ISCHANGED( UnitPrice ),
ISCHANGED( UseStandardPrice)
)</errorConditionFormula>
        <errorMessage>You can only edit the Active field and create new pricebook entry record.</errorMessage>
    </validationRules>
</CustomObject>